[package]
name = "rusdo"
description = "A minimalist to-do list app, still under construction."
authors = ["Ammar Elmesaly"]
license = "MIT"
keywords = ["CLI", "Productivity"]
version = "0.1.1"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
rusqlite = "0.37.0"
tui-input = "0.14.0"
